Fix CallToAction overflow
The parallax animations caused an overflow which 
caused vertical scrolling. The overflow has been 
hidden.

--- a/src/components/organisms/sections/CallToAction/callToAction.scss
+++ b/src/components/organisms/sections/CallToAction/callToAction.scss
@@ -1,8 +1,9 @@
 #calltoaction {
+  overflow: hidden;
   padding-top: 7.5rem;
   padding-bottom: 7.5rem;
   h2 {
-    font-size: 4.625rem;
+    font-size: 4rem;
   }
   p {
     font-size: 1.5rem;
